client/views/css/DoritoMenu.less
/* CSS declarations go here */

/* We don't want anything in the menu to be highlighted on touch */
* {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

html {
    background: black;
    height: 100%;
    cursor: url("../img/cursor.png"), auto;
}

body {
    height: 100%;
    background-size: contain;
    opacity: 0;
    background: url(../img/background-sky.jpg) no-repeat center center;
}

.overlay[data-id=gameservers]  {
    width: 76vw;
    height: 80vh;
    top: 10vh;
    left: 17vw;
    padding-right: 0;
}

#wrap {
    min-height: 100%;
    height: auto;
    margin: 0 auto -60px;
    padding: 0 0 60px;
}

#wrap > .container {
    padding: 60px 15px 0;
}

.container .text-muted {
    margin: 20px 0;
}

.overlay {
    position: absolute;
    width: 40vw;
    height: 70vh;
    background: rgba(20, 20, 32, 0.68);
    color: white;
    top: 15vh;
    left: 30vw;
    padding: 20px;
    border-radius: 6px;
    opacity: 0;
    transition: opacity 0.7s cubic-bezier(0, 0, 0.2, 1);
    border-radius: 0;
    box-shadow: 0px 0px 12px 0px rgba(255, 255, 255, 0.25);
    visibility: hidden;

    &.active {
        visibility: visible;
        opacity: 1;
    }
}


.credits {
    color: white;
    font-size: 25px;
    padding: 0 20px;
    background: url(../img/eldorito-logo.png) no-repeat center top;
    padding-top: 95px;
    
    .right-col {
        text-align: right;
    }
    .heading {
        color: white;
        font-size: 37px;
        text-transform: uppercase;
        margin: 0 auto;
        text-align: center;
        margin-bottom: 10px;
    }
}


.load {
    opacity: 1;
    transition: all 1.0s;
}

.md-snackbar {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
}

.alpha {
    background: url(/img/construction.png) no-repeat bottom right;
    padding-left: 36px;
    color: white;
    font-size: 20px;
    position: absolute;
    bottom: 90px;
    right: 20px;
    letter-spacing: 0;
    height: 45px;
    line-height: 84px;
    vertical-align: bottom;
    background-size: 29px;
    display: block;
    padding-top: 16px;
}

